Sqashed Commit: Milestone 0.0.3 with Flare Endpoint and Integration Tests
Signed-off-by: Lucas Triefenbach <zoo.triefenbach@gmx.de>