@@ -1,29 +1,25 @@
 package de.medizininformatikinitiative.torch.util;
 
-import ca.uhn.fhir.context.FhirContext;
-import ca.uhn.fhir.parser.IParser;
 import de.medizininformatikinitiative.torch.CdsStructureDefinitionHandler;
 import org.hl7.fhir.r4.model.*;
-import org.hl7.fhir.r4.model.Factory;
-import org.hl7.fhir.r4.model.ElementDefinition;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+import java.util.Objects;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 import static de.medizininformatikinitiative.torch.util.FhirExtensionsUtil.createAbsentReasonExtension;
 
 public class Redaction {
+
+
+    private static final Logger logger = LoggerFactory.getLogger(Redaction.class);
+
     private org.hl7.fhir.r4.model.StructureDefinition.StructureDefinitionSnapshotComponent snapshot;
 
     private StructureDefinition structureDefinition;
-    private Factory factory;
-
-
-    private FhirContext ctx;
-    private IParser parser;
-
-    private String url;
-
-    private CdsStructureDefinitionHandler CDS;
+    private final Factory factory;
+    private final CdsStructureDefinitionHandler CDS;
 
 
     /**
@@ -33,34 +29,30 @@ public class Redaction {
      */
     public Redaction(CdsStructureDefinitionHandler CDS) {
         this.CDS = CDS;
-        ctx=CDS.ctx;
-        parser=ctx.newJsonParser();
         factory = new Factory();
     }
 
 
     /**
      * Executes redaction operation on the given base element recursively.
-     * @param base
-     * @param elementID
-     * @param recursion
-     * @return
+     * @param base Base to be redacted (e.g. a Ressource or an Element)
+     * @param elementID "Element ID of parent currently handled initially empty String"
+     * @param recursion "Resurcion depth (for debug purposes)
+     * @return redacted Base
      */
     public Base redact(Base base, String elementID, int recursion) {
         AtomicBoolean childrenEmpty = new AtomicBoolean(true);
         recursion++;
 
-        /**
+        /*
          * Check if the base is a DomainResource and if it has a profile. Used for initial redaction.
          */
-        if (base instanceof DomainResource) {
+        if (base instanceof DomainResource resource) {
             recursion = 1;
-            DomainResource resource = (DomainResource) base;
             if (resource.hasMeta()) {
-                CanonicalType profileurl = resource.getMeta().getProfile().get(0);
+                CanonicalType profileurl = resource.getMeta().getProfile().getFirst();
                 structureDefinition=CDS.getDefinition(String.valueOf(profileurl.getValue()));
                 snapshot = structureDefinition.getSnapshot();
-                url=String.valueOf(profileurl.getValue());
             }
             elementID = String.valueOf(resource.getResourceType());
 
@@ -70,8 +62,6 @@ public class Redaction {
 
         ElementDefinition definition = snapshot.getElementById(elementID);
 
-
-        //TODO: Handle Slicing
         if (definition.hasSlicing()) {
               Slicing slicing = new Slicing(CDS);
             ElementDefinition slicedElement = slicing.checkSlicing(base, elementID, structureDefinition);
@@ -91,13 +81,14 @@ public class Redaction {
             String type = "";
             try {
                 childDefinition = snapshot.getElementById(childID);
-                type = childDefinition.getType().get(0).getWorkingCode();
+                type = childDefinition.getType().getFirst().getWorkingCode();
             } catch (NullPointerException e) {
                 try {
                     childDefinition = child.getStructure().getSnapshot().getElementById(child.getName());
                     childID = child.getName();
-                    type = childDefinition.getType().get(0).getWorkingCode();
+                    type = childDefinition.getType().getFirst().getWorkingCode();
                 } catch (NullPointerException ex) {
+                    logger.error("", ex);
                 }
             }
 
@@ -121,7 +112,7 @@ public class Redaction {
 
 
             } else {
-                if (childDefinition != null && childDefinition.getMin() > 0 && child.getTypeCode() != "Extension") {
+                if (childDefinition != null && childDefinition.getMin() > 0 && !Objects.equals(child.getTypeCode(), "Extension")) {
                     //TODO Backbone Element Handling and nested Extensions
                     Element element = factory.create(type).addExtension(createAbsentReasonExtension("masked"));
                     base.setProperty(child.getName(), element);
